<resources>
    <string name="app_name">Kalymni</string>
    <string name="post">Message</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your email</string>
    <string name="your_password">Your password</string>
    <string name="sign_up">Sign up</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="time_of_msg">6:42 pm</string>
    <string name="txt_of_msg">Welcome</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="new_group">New group</string>
    <string name="user_name">User Name</string>
    <string name="welcome">Welcome</string>
    <string name="add_participants">Add participants</string>
    <string name="user_online">Online</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="next">Next</string>
    <string name="kalymni_needs_to_verify_your_account">Kalymni needs to verify your account.</string>
    <string name="your_number_is_being_verified">Your number is being verified.</string>
    <string name="waiting_for_automatic_detection_of_a_text_message_sent_to_me">Waiting for automatic detection of a text message sent to</string>
    <string name="modify_the_number">Modify the number?</string>
    <string name="hint_code">_</string>
    <string name="resend_code_in">Resend code in</string>
    <string name="select_the_contact">Select the contact</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_status">Enter your status</string>
    <string name="finish">Finish</string>
    <string name="cancel">Cancel</string>
    <string name="add_subject">Add subject</string>
    <string name="delete_from_me">Delete from me</string>
    <string name="delete_from_all">Delete from all</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="profile">Profile</string>
    <string name="update_name">Update name</string>
    <string name="ok">Ok</string>
    <string name="update_status">Update status</string>
    <string name="typing">typing...</string>
    <string name="group">Group</string>
    <string name="leave_group">Leave group</string>
    <string name="leave_from_group">Leave from group</string>
    <string name="create_admin">Create admin</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
</resources>