<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/primaryColor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:textSize="20sp"
        android:text="@string/are_you_sure"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/yes"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/ok"
            android:backgroundTint="@color/primaryColorDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/no"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/no"
            android:backgroundTint="@color/primaryColorDark"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>