<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryColorDark"
    tools:context=".EditProfile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarAllUsers"
        android:background="@color/primaryColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back"
                android:src="@drawable/arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:text="@string/profile"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/edit_image_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/person" />

    <LinearLayout
        android:id="@+id/change_name"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginRight="15dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/baseline_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/name"
                android:textColor="#DADADA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/name"
                android:layout_marginTop="3dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ImageView
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_status"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginRight="15dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/status"
                android:textColor="#DADADA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/status"
                android:layout_marginTop="3dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ImageView
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>