<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primaryColor"
    tools:context=".SignIn">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:background="@color/primaryColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/verify_your_phone_number"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/txt"
        android:layout_below="@id/toolBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/kalymni_needs_to_verify_your_account" />

    <LinearLayout
        android:id="@+id/num"
        android:layout_below="@id/txt"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="35dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/code"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:theme="@style/CustomEditText"
                android:layout_width="80dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:backgroundTint="@android:color/transparent"
                    android:drawableStart="@drawable/add"
                    android:maxLength="3"
                    android:textColor="@color/white"
                    android:inputType="phone"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:background="@color/icon_color"
                android:layout_width="80dp"
                android:layout_height="2dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="250dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number"
                app:boxStrokeColor="@color/icon_color"
                app:boxStrokeWidthFocused="0dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:theme="@style/CustomEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:backgroundTint="@android:color/transparent"
                    android:textColor="@color/white"
                    android:inputType="phone"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:background="@color/icon_color"
                android:layout_width="250dp"
                android:layout_height="2dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_continue"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_round"
        android:backgroundTint="@color/white"
        android:textAllCaps="false"
        android:elevation="60dp"
        android:text="@string/next"
        android:textColor="@color/icon_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>