<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColorDark"
    tools:context=".AllUsers">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarCreateGroup"
        android:background="@color/primaryColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/back_create_group"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/arrow_back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/new_group"
                    android:layout_marginLeft="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:gravity="center_vertical"
                    android:text="@string/add_subject"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/serch"
                android:orientation="horizontal"
                android:gravity="end"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></LinearLayout>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/add_sub"
        android:layout_below="@id/toolBarCreateGroup"
        android:layout_marginTop="10dp"
        android:background="@color/primaryColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:paddingHorizontal="30dp"
            android:paddingVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/add_pictcher_group"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:civ_border_color="@color/gray"
                app:civ_border_width="1dp"
                android:src="@drawable/camera"
                app:tint="@color/icon_color" />

            <LinearLayout
                android:id="@+id/lin_name"
                android:orientation="vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="-10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_group"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:theme="@style/CustomEditText"
                    android:hint="@string/enter_your_name"
                    app:hintTextColor="@color/white"
                    android:textColorHint="@color/gray"
                    app:boxStrokeWidth="0dp"
                    app:counterMaxLength="100"
                    app:boxStrokeWidthFocused="0dp"
                    app:counterEnabled="true"
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:background="@android:color/transparent"
                        android:textColor="@color/white"
                        android:inputType="text"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="55dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:background="@color/icon_color"
                    android:layout_marginLeft="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_create_group"
        android:src="@drawable/done"
        android:layout_alignParentBottom="true"
        android:tint="@color/icon_color"
        android:elevation="12dp"
        app:elevation="12dp"
        app:tint="@color/icon_color"
        android:layout_alignParentEnd="true"
        android:background="@drawable/bg_btn_mic"
        android:backgroundTint="@color/primaryColor"
        app:backgroundTint="@null"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_width="60dp"
        android:layout_height="60dp" />
</RelativeLayout>